# nes-emulator

./: .clang-format  .gitignore  CMakeLists.txt  TODO.md  justfile
.tasks/: 20260502-134138-467-n6-189.md  20260502-141946-173-n6-290.md  20260502-211526-008-n6-146.md  20260502-212059-824-n6-388.md  20260505-161630-763-n6-804.md  20260505-162005-313-n6-469.md  20260505-170156-448-n6-762.md  20260506-141052-044-n6-521.md  20260507-214238-186-n6-343.md  20260507-214301-213-n6-798.md  20260508-100443-929-n6-210.md  20260508-141040-279-n6-549.md  20260510-203758-089-n6-087.md
include/: aids.h  cpu.h  ints.h  map.h  pallete.h  types.h  util.h
roms/: README.txt
src/: aids.c  cpu.c  main.c  util.c
